# Airlines-Manager-Finder

./: LICENSE.txt  README.md  build.gradle  settings.gradle
app/: brokaphub-key.jks  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: offline.html
app/src/main/cpp/: CMakeLists.txt  crypto-lib.cpp  main-lib.cpp  math-lib.cpp  native-lib.cpp  pairipcore.cpp
app/src/main/java/com/airlinesmanagerfinder/: MainActivity.kt  SplashActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: toolbar_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_icon.xml
app/src/main/res/values/: colors.xml  strings.xml
